--- a/composer.json
+++ b/composer.json
@@ -10,11 +10,14 @@
     "require": {
         "php": "^7.2.5",
         "beyondcode/laravel-websockets": "^1.4",
+        "cviebrock/eloquent-sluggable": "^7.0",
         "fideloper/proxy": "^4.2",
         "fruitcake/laravel-cors": "^1.0",
         "guzzlehttp/guzzle": "^6.3",
+        "laracasts/flash": "^3.1",
         "laravel/framework": "^7.0",
-        "laravel/tinker": "^2.0"
+        "laravel/tinker": "^2.0",
+        "pusher/pusher-php-server": "~3.0"
     },
     "require-dev": {
         "facade/ignition": "^2.0",
