--- a/composer.json
+++ b/composer.json
@@ -16,7 +16,9 @@
         "guzzlehttp/guzzle": "^6.3",
         "laracasts/flash": "^3.1",
         "laravel/framework": "^7.0",
+        "laravel/horizon": "^4.1",
         "laravel/tinker": "^2.0",
+        "predis/predis": "^1.1",
         "pusher/pusher-php-server": "~3.0"
     },
     "require-dev": {
