--- a/composer.json
+++ b/composer.json
@@ -19,7 +19,8 @@
         "laravel/horizon": "^4.1",
         "laravel/tinker": "^2.0",
         "predis/predis": "^1.1",
-        "pusher/pusher-php-server": "~3.0"
+        "pusher/pusher-php-server": "~3.0",
+        "webpatser/laravel-uuid": "^3.0"
     },
     "require-dev": {
         "facade/ignition": "^2.0",
