--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
         "pusher-js": "^5.1.1",
         "vue": "^2.6.11",
         "vue-axios": "^2.1.5",
+        "vue-toasted": "^1.1.28",
         "vuetify": "^2.2.19"
     }
 }
